# AcqEngC

standalone/: CMakeLists.txt
standalone/source/: main.cpp
